--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+* Config cooldown
 * Helpers API
   - Something to add both config_validator and on_terminate and tokio extension for that
 * Run on spirit itself too
