--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* Validate the config once again after switching the working directory?
+* Turn all paths to absolute on startup
 * Helpers API
   - Something to add both config_validator and on_terminate and tokio extension for that
 * Run on spirit itself too
