--- a/TODO
+++ b/TODO
@@ -1,7 +1,10 @@
 * Validate the config once again after switching the working directory?
+* Update docs for the helper APIs
 * Turn all paths to absolute on startup
 * Helpers API
-  - Something to add both config_validator and on_terminate and tokio extension for that
+  - The builder stuff
+  - Some helper functions to generate tcp and udp listeners
+* Don't box the tasks sent to tokio ‒ the extra box is extra indirection on *each* poll and we want to avoid that. Do a chain of trait objects that directly spawn into tokio.
 * Run on spirit itself too
 * Example inside readme, better explanation
 * Fill in TODOs in docs
