--- a/TODO
+++ b/TODO
@@ -1,9 +1,14 @@
+* The tokio helpers don't handle well if single socket gets different auxiliary configuration
+  - We would create a new one, but we would still have the old somewhere.
+  - We probably want some way to cache the socket itself but recreate the future.
+  - We probably want to use it to be able to multiply the listeners
 * Validate the config once again after switching the working directory?
 * Update docs for the helper APIs
 * Turn all paths to absolute on startup
 * Helpers API
   - The builder stuff
   - Some helper functions to generate tcp and udp listeners
+  - Custom derive so the helpers can be directly attached to the config.
 * Don't box the tasks sent to tokio ‒ the extra box is extra indirection on *each* poll and we want to avoid that. Do a chain of trait objects that directly spawn into tokio.
 * Run on spirit itself too
 * Example inside readme, better explanation
