--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 * Keywords, metadata for the new crates
 * Documentation
 * Can we daemonize only on success?
-* Logging into the new crates
+* A bigger example with multiple helpers
