--- a/TODO
+++ b/TODO
@@ -1,2 +1,6 @@
 * Documentation
 * A bigger example with multiple helpers
+* Helper for configs that don't change
+  - With FnOnce
+  - Without FnOnce
+  - Both with a warning
