--- a/TODO
+++ b/TODO
@@ -5,3 +5,6 @@
   - Both with a warning
 * Another Opt structure with -v and such.
 * Run the backgroud thread as a task in tokio?
+* Why C needs to be Debug?
+* The builder could be must_use
+* config_exts_all?
