Extract config loader
So it can be used separately, without the rest of the spirit

--- a/TODO
+++ b/TODO
@@ -7,3 +7,4 @@
 * Maybe stuck Serialize on stuff too?
 * The TcpListen, UdpListen, UnixListen and DatagramListen look very similar ‒
   share the code somehow? Macro?
+* Get rid of the deprecated methods
