Port logging to pipelines
TODO: Missing docs/updates to old docs

* before_config is now part of Extensible
* Pipeline can optionally plug into before_config too

--- a/TODO
+++ b/TODO
@@ -6,3 +6,7 @@
 * The TcpListen, UdpListen, UnixListen and DatagramListen look very similar ‒
   share the code somehow? Macro?
 * Get rid of the deprecated methods
+
+* !! Before release ‒ make config_validator and such run the provided hook on plug in
+* Simplify validation results?
+* unify Order of Opts/Config
