--- a/TODO
+++ b/TODO
@@ -2,9 +2,7 @@
 * Run the backgroud thread as a task in tokio?
 * Why C needs to be Debug?
 * config_exts_all?
-* Maybe log-errors as a macro?
 
-* Error logging: allow specifying the level, allow single-line format
 * Where are all the errors if validation of config fails? One of them seems to
   be missing somewhere (or maybe all and that's only what gets printed in case
   it bubbles one level up).
@@ -12,3 +10,5 @@
 * unify Order of Opts/Config
 
 * Reintroduce scaling
+* Guard keeper and waiting for the background thread to terminate
+  - For stuff like async logging
