--- a/TODO
+++ b/TODO
@@ -13,3 +13,4 @@
 * Guard keeper and waiting for the background thread to terminate
   - For stuff like async logging
 * Parts of the core spirit can be split off and useful separately ‒ base traits, config loading. Then, if the user doesn't want the background thread and stuff, it can be used manually.
+* When rust-1.33 is out go back to using references inside extractors in the examples.
