--- a/TODO
+++ b/TODO
@@ -18,3 +18,4 @@
   deserializing from config to deserializing from toml::Value and that one is
   strict. Is there a trick to make it non-strict?
 * Stackable and optional for references, eg Vec<&Fragment> or Option<&Fragment>
+* Use humantime-serde to get rid of our own humantime/serde integration
