--- a/TODO
+++ b/TODO
@@ -19,3 +19,4 @@
   strict. Is there a trick to make it non-strict?
 * Stackable and optional for references, eg Vec<&Fragment> or Option<&Fragment>
 * Use humantime-serde to get rid of our own humantime/serde integration
+* Use serde_path_to_error to recover nice error messages for configs
